tests/samples/invalid/PassAchievement.py
# cases where PassAchievement should not unlock

# >> CASE
for _ in range(4):
    x = 4

# >> CASE
def test():
    return

# >> CASE
class Test:
    value = 4
